--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,6 +17,10 @@
             "id": "panel1",
             "main": "index.html",
             "documentSandbox": "sandbox/code.js"
+            "permissions": {
+                "camera": "*",
+                "microphone": "*"
+            }
         }
     ]
 }
