--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,5 +22,12 @@
                 "microphone": "*"
             }
         }
+    ],
+     "resources": [  
+        {
+            "files": [
+                "assets/**/*" 
+            ]
+        }
     ]
 }
